[package]
name = "radar_monitor"
version = "1.0.0"
authors = ["Niklas Larsson <niklaslarsson95@gmail.com>"]

[dependencies]
ftp = "*"
glium = "*"
image = "*"
rocket = "*"
rocket_codegen = "*"
serde = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates"]
